# NdEditor

./: CMakeLists.txt  array_utilites.h  main.cpp
Parser_ver_2/: CMakeLists.txt  context_ver_2.cpp  context_ver_2.cpp~RF1f84402b.TMP  context_ver_2.h  context_ver_2.h~RFef36f8c.TMP  context_ver_2.h~RFef3b203.TMP  context_ver_2.h~RFef41b6c.TMP  context_ver_2.h~RFef4b615.TMP  object_factory_optimization.cpp  object_factory_optimization.h  parse_errors_ver_2.cpp  parse_errors_ver_2.h  parsing_funs_ver_2.cpp  parsing_funs_ver_2.h  some_more_parsing_utilites.h  transformation_support.cpp  transformation_support.h
QtQuickProject/: CMakeLists.txt  Main.qml  SaveDialog.qml  Test_expressions.json  Test_transform_perfomance.json  chmhelp.cpp  chmhelp.h  demo.json  demo_variables.json  help.chm  log.h  main.cpp  model.cpp  model.h  objectentry.cpp  objectentry.h  problem1.json  problem2.json  strings_to_screen_version1.cpp  strings_to_screen_version1.h  test_ndeditor_expressions  triangle_geometry.cpp  triangle_geometry.h  triangles.h  try_minkov_sum.json
QtQuickProject/arhived/: Main.qml  TriangleGeometry.cpp  TriangleGeometry.h  main.cpp  triangles.h
TestIntearface/: CMakeLists.txt  chatgpt_interface.h  main.cpp
linear_algebra/: linear_algebra.h  linear_algebra_utilites.h
logger/: CMakeLists.txt  basic_loggers.h  logger.h  main.cpp
logger/include/: basic_loggers.h  logger.cpp  logger.h
logs/: 2025-04-18 22-36-52.txt  2025-04-18 22-38-40.txt  2025-04-18 22-40-53.txt  2025-04-18 22-50-58.txt  2025-04-18 23-03-38.txt  2025-04-19 16-31-55.txt
logs/triangulation/: 2025-04-19 08-32-11.txt  2025-04-19 08-33-11.txt  2025-04-19 09-07-47.txt  2025-04-19 09-14-55.txt  2025-04-19 10-24-14.txt  2025-04-19 16-43-39.txt  2025-04-19 17-07-44.txt  2025-04-19 17-15-59.txt  2025-04-19 17-16-17.txt  2025-04-19 17-16-37.txt  2025-04-19 17-17-31.txt  2025-04-19 17-36-11.txt  2025-04-19 19-14-53.txt  2025-04-19 19-18-46.txt  2025-04-19 19-20-07.txt  2025-04-19 19-20-27.txt  2025-04-19 19-23-58.txt  2025-04-19 20-44-03.txt  2025-04-19 20-46-38.txt  2025-04-19 21-03-44.txt  2025-04-19 21-14-29.txt  2025-04-19 21-16-33.txt  2025-04-19 21-49-05.txt  2025-04-19 22-03-33.txt  2025-04-19 22-04-50.txt  2025-04-19 22-12-32.txt  2025-04-19 22-13-46.txt  2025-04-19 22-18-38.txt  2025-04-19 22-23-28.txt  2025-04-19 22-28-57.txt  2025-04-19 22-39-31.txt  2025-04-19 22-45-58.txt  2025-04-19 22-48-09.txt  2025-04-19 23-02-02.txt  2025-04-19 23-03-47.txt  2025-04-19 23-08-20.txt  2025-04-19 23-18-58.txt  2025-04-20 10-39-58.txt  2025-04-21 14-46-48.txt
nd_geometry/: chernikovrulessupport.h  example_architect_linear_geometry.h  example_linear_geometry.h  geom_sys.h  group_geom_sys.h  linear_geometry_std_structures.h  naive_geometry_objects_factory.h  polyhedron_geom_sys.h  std_space_factory.h  test_group_gs.cpp  transformation.h
parser/: debug.hh  function_parse_architect.hh  function_parse_instructions.hh  linear_inequalites_parser_test_expr  main_test.cpp  operator_parse_instructions.hh  outparse.cpp  outparse.hh  parse_instructions.hh  parse_terminals.cpp  parse_terminals.hh  parse_terminals_source.cpp  parse_tree.hh  parsing_errors.h  std_context.h  std_context.h~RF78c4ce2.TMP  std_parsing_funs.cpp  std_parsing_funs.h  std_parsing_funs.h~RF11e89c2.TMP  std_parsing_funs.h~RF1314b55.TMP  std_parsing_funs.h~RF132b4c8.TMP  std_parsing_funs.h~RF149e752.TMP  std_parsing_funs.h~RF14b335a.TMP  std_parsing_funs.h~RF14dd974.TMP  std_parsing_funs.h~RF1511c4b.TMP  std_parsing_funs.h~RFf632a45.TMP  test_inequality_system_parsing_1.cpp  test_inequality_system_parsing_1.h  wrappers.hh
testWindow/: CMakeLists.txt  aaaa.h  gl_wiget.h  main.cpp
triangulation/: CMakeLists.txt  main.cpp  optimized_eigein_triangulation.h  triangulation.h  triangulation_with_eigen_1.cpp  triangulation_with_eigen_1.h
triangulation/include/: triangulation.cpp  triangulation.h
